--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,6 +3,12 @@
 <body>
 <h2>Chat with GPT-3!</h2>
 
+{% if refresh %}
+  <div style="color: red; font-weight: 600;">
+    Token was refreshed automatically.
+  </div>
+{% endif %}
+
 <form action="/chat" method="post">
   <div class="container">
     <label for="message"><b>Message</b></label>
@@ -13,16 +19,16 @@
 </form>
 
 {% if chat %}
-    <h2>Chat history:</h2>
-    <ul>
-    {% for message in chat %}
-        {% if message.role == 'user' %}
-            <li>👤 {{ message.content }}</li>
-        {% else %}
-            <li>🤖 {{ message.content }}</li>
-        {% endif %}
-    {% endfor %}
-    </ul>
+  <h2>Chat history:</h2>
+  <ul>
+  {% for message in chat %}
+    {% if message.role == 'user' %}
+      <li>👤 {{ message.content }}</li>
+    {% else %}
+      <li>🤖 {{ message.content }}</li>
+    {% endif %}
+  {% endfor %}
+  </ul>
 {% endif %}
 <a href="/logout">Logout</a>
 
