--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xml:lang="en">
+<head>
+  <title>Chat!</title>
+</head>
 <body>
 <h2>Chat with GPT-3!</h2>
 
