--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xml:lang="en">
+<head>
+  <title>Welcome to SC!</title>
+</head>
 <body>
 
 <h2>Welcome to our site!</h2>
