--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xml:lang="en">
+<head>
+  <title>Logout</title>
+</head>
 <body>
 
 <h2>You're logging out</h2>
